--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -33,7 +33,7 @@
 	          <a class="nav-link" href="pricing.php">Pricing</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link btn btn-sm btn-dark text-white" href="enquiry.php">Enquiry</a>
+	          <a class="nav-link btn btn-sm btn-dark text-white" href="{% url 'enquiry' %}">Enquiry</a>
 	        </li>
 	        <li class="nav-item dropdown">
 	          <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -59,10 +59,11 @@
     <!-- Footer Start-->
     <footer class="container py-5">
 	    <p class="float-end"><a href="#">Back to top</a></p>
-	    <p>© 2017–2021 Arnold GYM, Inc. · 
-            <a href="page.php">Privacy</a> · 
-            <a href="page.php">Terms</a> . 
-            <a href="faq.php">FAQ</a>
+	    <p>© 2023 Re1gns, Inc. · 
+            <a href="{% url 'pagedetail' 2 %}">Privacy</a> · 
+            <a href="{% url 'pagedetail' 3 %}">Terms</a> . 
+            <a href="{% url 'faq' %}">FAQ</a>
+			<a href="#">Contact Us</a>
         </p>
 	  </footer>
 
