--- a/GymManagementSystem/main/templates/pricing.html
+++ b/GymManagementSystem/main/templates/pricing.html
@@ -48,7 +48,7 @@
             <th scope="row" class="text-start">{{feature.title}}</th>
             {% for plan in plans %}
             <td>
-              {% if plan.id == feature.subplan.id %}
+              {% if plan in feature.subplan.all %}
               <i class="bi bi-check-lg"></i>
               {% else %}
               <i class="bi bi-x text-danger"></i>
