--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--Jquery-->
+	<script type="text/javascript" src="{% static 'jquery-3.7.1.min.js' %}"></script>
     <!-- Bootstrap CSS -->
     <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet" />
     <!-- Bootstrap Icons -->
@@ -15,16 +17,16 @@
   </head>
   <body>
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #26547C;">
 	  <div class="container">
-	    <a class="navbar-brand" href="./">GymManagementSystem</a>
+	    <a class="navbar-brand" href="{% url 'home' %}">Re1gns GMS</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 	    <div class="collapse navbar-collapse" id="navbarNav">
 	      <ul class="navbar-nav ms-auto">
 	        <li class="nav-item">
-	          <a class="nav-link" aria-current="page" href="./">Home</a>
+	          <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
 	        </li>
 	        <li class="nav-item">
 	          <a class="nav-link" aria-current="page" href="{% url 'gallery' %}">Gallery</a>
@@ -40,11 +42,15 @@
 	            My Account
 	          </a>
 	          <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-	            <li><a class="dropdown-item" href="login.php">Login</a></li>
+				{% if request.user.is_not_authenticated %}
+				<li><a class="dropdown-item" href="#">Register</a></li>
+	            <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
 	            <li><hr class="dropdown-divider"></li>
+				{% else %}
 	            <li><a class="dropdown-item" href="#">Profile</a></li>
 	            <li><a class="dropdown-item" href="#">Settings</a></li>
-	            <li><a class="dropdown-item" href="#">Logout</a></li>
+	            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+				{% endif %}
 	          </ul>
 	        </li>
 	      </ul>
