--- a/GymManagementSystem/main/templates/home.html
+++ b/GymManagementSystem/main/templates/home.html
@@ -1,4 +1,5 @@
  {% extends 'base.html' %}
+ {% load static %}
  {% block content %}
  <!-- Main Start -->
  <main>
@@ -60,18 +61,9 @@
                 <div class="col-md-6 offset-1">
                         <h1 class="mb-4 section-heading">Gallery <a href="#" class="float-end btn btn-info text-white mt-2">View All</a></h1>
                         <div class="gallery">
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/cardio-1.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/cardio-1.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/cardio-1.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/dance-3.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
-                            <a data-lightbox="home-gallery" href="imgs/body-2.jpg"><img src="imgs/body-2.jpg" width="155" class="img-thumbnail" alt="..."></a>
+                          {% for gimg in gimgs %}
+                          <a data-lightbox="home-gallery" href="{{gimg.img.url}}"><img src="{{gimg.img.url}}" width="155" class="img-thumbnail" alt="{{gimgs.alt_text}}"a>
+                          {% endfor %}
                         </div>
                 </div>
             </div>
@@ -81,7 +73,7 @@
 
 </main>
 <!-- End -->
-
-<script type="text/javascript" src="assets/lightbox2-2.11.3/dist/js/lightbox.min.js"></script>
-<link rel="stylesheet" type="text/css" href="assets/lightbox2-2.11.3/dist/css/lightbox.min.css" />
+<!--Lightbox-->
+<script type="text/javascript" src="{% static 'lightbox2/dist/js/lightbox.js' %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'lightbox2/dist/css/lightbox.min.css' %}" />
 {% endblock %}
