--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -10,9 +10,9 @@
     <!-- Bootstrap CSS -->
     <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet" />
     <!-- Bootstrap Icons -->
-    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap-icons/font/bootstrap-icons.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-icons/font/bootstrap-icons.css' %}" />
     <!-- jquery -->
-    <script src="assets/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
     <title>Home - GymManagementSystem</title>
   </head>
   <body>
