--- a/GymManagementSystem/main/templates/user/left_sidebar.html
+++ b/GymManagementSystem/main/templates/user/left_sidebar.html
@@ -3,6 +3,6 @@
     <a href="{% url 'update_profile' %}" class="list-group-item">Edit Profile</a>
     <a href="{% url 'password_change' %}" class="list-group-item">Change Password</a>
     <a href="#" class="list-group-item">My Plan</a>
-    <a href="#" class="list-group-item">Notifications</a>
+    <a href="{% url 'notification' %}" class="list-group-item">Notifications</a>
     <a href="#" class="list-group-item">Messages</a>
 </div>
