--- a/GymManagementSystem/main/templates/notification.html
+++ b/GymManagementSystem/main/templates/notification.html
@@ -35,13 +35,36 @@
                     _html='';
                     _json=$.parseJSON(res.data);
                     $.each(_json,function(index,d){
-                        _html+='<li class="list-group-item bg-light">'+d.fields.notification_detail+'<button class="btn btn-sm btn-secondary float-end">Mark read</button></li>';
+                        _html+='<li class="list-group-item bg-light list'+d.pk+'">'+d.fields.notification_detail+'<button data-index="'+d.pk+'" data-notif="'+d.pk+'" class="btn btn-sm btn-secondary float-end markreadbtn">MarkRead</button><i class="fa fa-checkbox"></i></li>';
                     });
                     $(".notification-list").html(_html);
                     $(".ajaxRes").hide();
                 }
             });
         },5000);
+
+        //Mark as read section
+        $(document).on("click","markreadbtn",function(){
+            var _index=$(this).attr('data-index');
+            var _notif=$(this).attr('data-notif');
+
+            $.ajax({
+                url:"{% url 'mark_read_notification' %}",
+                data{
+                    notif:_notif
+                },
+                dataType:'json',
+                beforeSend:function(){
+                    
+                },
+                success:function(res){
+                    console.log(res);
+                }
+            });
+
+        });
+        //end
+
     });
 </script>
 
