--- a/GymManagementSystem/main/templates/user/left_sidebar.html
+++ b/GymManagementSystem/main/templates/user/left_sidebar.html
@@ -1,8 +1,7 @@
 <div class="list-group">
-    <a href="{% url 'user_dashboard' %}" class="list-group-item">Dashboard</a>
-    <a href="{% url 'update_profile' %}" class="list-group-item">Edit Profile</a>
-    <a href="{% url 'password_change' %}" class="list-group-item">Change Password</a>
-    <a href="#" class="list-group-item">My Plan</a>
-    <a href="{% url 'notification' %}" class="list-group-item">Notifications</a>
-    <a href="#" class="list-group-item">Messages</a>
+    <a href="{% url 'user_dashboard' %}" class="list-group-item {% if request.path == '/user/dashboard' %} active {% endif %}">Dashboard</a>
+    <a href="{% url 'update_profile' %}" class="list-group-item {% if request.path == '/user/edit_profile' %} active {% endif %}">Edit Profile</a>
+    <a href="{% url 'password_change' %}" class="list-group-item {% if request.path == '/accounts/password_change/' %} active {% endif %}">Change Password</a>
+    <a href="{% url 'notification' %}" class="list-group-item {% if request.path == '/notification' %} active {% endif %}">Notifications<span class="float-end badge bg-danger mt-1">{{TotalUnread}}</span></a>
+    <a href="#" class="list-group-item {% if request.path == '' %} active {% endif %}">Messages</a>
 </div>
