--- a/GymManagementSystem/main/templates/pricing.html
+++ b/GymManagementSystem/main/templates/pricing.html
@@ -17,7 +17,7 @@
             <h4 class="my-0 fw-normal">{{plan.title}}</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">${{plan.price}}<small class="text-muted fw-light">/mo</small></h1>
+            <h1 class="card-title pricing-card-title">${{plan.price}}<small class="text-muted fw-light">/{{plan.validity_period}} Days</small></h1>
             <p class="text-success">Max Users Allowed {{plan.max_member}}</p>
             <ul class="list-unstyled mt-3 mb-4">
               {% for feature in plan.subplanfeature_set.all %}
