--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -80,6 +80,6 @@
 
     <!-- Bootstrap Bundle -->
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
-
+	<script src="{% static 'popper.min.js' %}"></script>
   </body>
 </html>
