--- a/GymManagementSystem/main/templates/trainer/login.html
+++ b/GymManagementSystem/main/templates/trainer/login.html
@@ -12,7 +12,7 @@
                     {% if msg %}
                     <p class="text-warning">{{msg}}</p>
                     {% endif %}
-					<form method="post" action="">
+					<form method="post" action="{% url 'trainerlogin' %}">
                         {% csrf_token %}
 						<table class="table table-bordered">
 							{{form.as_table}}
