--- a/GymManagementSystem/main/templates/user/dashboard.html
+++ b/GymManagementSystem/main/templates/user/dashboard.html
@@ -11,20 +11,65 @@
                 <div class="col-9">
                     <h3 class="mb-4 border-bottom pb-1">Dashboard</h3>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="card">
                                 <h5 class="card-header">Current Plan</h5>
                                 <div class="card-body">
                                     <h6 class="card-text">{{current_plan.plan}}</h6>
                                     <p>Price: ${{current_plan.price}}</p>
+                                    <p>Purchased on: {{current_plan.sub_date}}</p>
+                                    <p>Expires on: {{enddate}}</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-6">
                             <div class="card">
                                 <h5 class="card-header">Assigned Trainer</h5>
+                                <img class="card-img-top" 
+                                    src="{{ assigned_trainer.trainer.img.url }}" 
+                                    alt="{{ assigned_trainer.trainer }}"
+                                    style="padding: 10px; max-width: 100%; object-fit: cover;">
                                 <div class="card-body">
                                     <h6 class="card-text">{{assigned_trainer.trainer}}</h6>
+                                </div>
+                                <div class="card-footer">
+                                    <a href="{{assigned_trainer.trainer.facebook}}"><i class="bi bi-facebook fs-3"></i></a>
+                                    <a href="{{assigned_trainer.trainer.twitter}}"><i class="bi bi-twitter-x fs-3 text-black"></i></a>
+                                    <a href="{{assigned_trainer.trainer.instagram}}"><i class="bi bi-instagram fs-3" style="background: linear-gradient(45deg, #f9ce34, #ee2a7b, #6228d7); background-clip: text; color: transparent;"></i></a>
+                                    <a href="{{assigned_trainer.trainer.youtube}}"><i class="bi bi-youtube fs-3" style="color: rgb(170, 31, 0);"></i></a>
+                                    <button data-bs-toggle="modal" data-bs-target="#AchievementsModal" title="Achievements" class="float-end fs-4 btn btn-sm btn-success"><i class="bi bi-trophy"></i></button>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="AchievementsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-lg" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">{{assigned_trainer.trainer.Full_Name}} Achievements</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <table class="table table-hover">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Title</th>
+                                                            <th>Image</th>
+                                                            <th>Details</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        {% for achieve in assigned_trainer.trainer.trainersachievements_set.all %}
+                                                        <tr>
+                                                            <td>{{achieve.title}}</td>
+                                                            <td><img src="{{achieve.img.url}}" width="80"></td>
+                                                            <td>{{achieve.details}}</td>
+                                                        </tr>
+                                                        {% endfor %}
+                                                    </tbody>
+                                                </table>
+                                        </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
