--- a/GymManagementSystem/main/templates/trainer/assigned_subs.html
+++ b/GymManagementSystem/main/templates/trainer/assigned_subs.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
     <!-- Main Start -->
     <main>
@@ -9,11 +10,12 @@
                     {% include 'trainer/left_sidebar.html' %}
                 </div>
                 <div class="col-9">
-                    <h3 class="mb-4 border-bottom pb-1">Trainer Dashboard</h3>
-                    <div class="row">
-                        <div class="col-md-6">
-                        </div>
-                    </div>
+                    <h3 class="mb-4 border-bottom pb-1">Subscribers List</h3>
+                    <div class="list-group">
+                        {% for as in assigned_subs %}
+                        <a href="#" class="list-group-item">{{as.user}}</a>
+                        {% endfor %}
+                    </div> 
                 </div>
             </div>
 		</section>
