--- a/GymManagementSystem/main/templates/trainer/left_sidebar.html
+++ b/GymManagementSystem/main/templates/trainer/left_sidebar.html
@@ -1,4 +1,9 @@
 <div class="list-group">
-    <a href="{% url 'trainer_dashboard' %}" class="list-group-item {% if request.path == '/user/dashboard' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Dashboard</a>
-    <a href="#" class="list-group-item {% if request.path == '/user/edit_profile' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Edit Profile</a>
+    <a href="{% url 'trainer_dashboard' %}" class="list-group-item {% if request.path == '/trainer_dashboard' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Dashboard</a>
+    <a href="{% url 'trainer_profile' %}" class="list-group-item {% if request.path == '/trainer/edit_profile' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Edit Profile</a>
+    <a href="{% url 'assigned_subscribers' %}" class="list-group-item {% if request.path == '/assigned_subscribers' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Assigned Subscribers</a>
+    <a href="{% url 'trainer_salary' %}" class="list-group-item {% if request.path == '/trainer_salary' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Salaries</a>
+    <a href="{% url 'trainer_changepassword' %}" class="list-group-item {% if request.path == '/trainer_changepassword' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Change Password</a>
+    <a href="#" class="list-group-item {% if request.path == '' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Messages<span class="float-end badge bg-danger mt-1">123</span></a>
+    <a href="#" class="list-group-item {% if request.path == '' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Notifications<span class="float-end badge bg-danger mt-1">123</span><i class="bi bi-bell"></i></a>
 </div>
