--- a/GymManagementSystem/main/templates/trainer/notification.html
+++ b/GymManagementSystem/main/templates/trainer/notification.html
@@ -14,7 +14,7 @@
                     {% include 'trainer/left_sidebar.html' %}
                 </div>
                 <div class="col-9">
-                    <h3 class="mb-4 border-bottom pb-1">Notifications <span class="badge bg-primary totalunread"></span></h3>
+                    <h3 class="mb-4 border-bottom pb-1">Notifications <span class="badge bg-primary totalunread">{{notification.count}}</span></h3>
                     <span class="ajaxRes"></span>
                     <ul class="list-group notification-list">
                         {% for notif in notification %}
