--- a/GymManagementSystem/main/templates/trainer/notification.html
+++ b/GymManagementSystem/main/templates/trainer/notification.html
@@ -11,16 +11,18 @@
 		<section class="container my-4">
 			<div class="row">
                 <div class="col-3">
-                    {% include 'trainer/left_sidebar.html' %}
+                    {% include 'trainer/left_sidebar.html' with TotalUnread=TotalUnread %}
                 </div>
                 <div class="col-9">
-                    <h3 class="mb-4 border-bottom pb-1">Notifications <span class="badge bg-primary totalunread">{{notification.count}}</span></h3>
+                    <h3 class="mb-4 border-bottom pb-1">Notifications <span class="badge bg-primary totalunread">{{TotalUnread}}</span></h3>
                     <span class="ajaxRes"></span>
                     <ul class="list-group notification-list">
                         {% for notif in notification %}
                         <li class="list-group-item">
-                            {{notif.notif_msg}}
-                            <span class="btn btn-primary btn-sm float-end">MarkRead</span>
+                            {{notif.notification_detail}}
+                            {% if not notif.notifStatus %}
+                            <span data-index="{{notif.pk}}" data-notification="{{notif.pk}}" class="btn btn-primary btn-sm float-end markreadbtn">MarkRead</span>
+                            {% endif %}
                         </li>
                         {% endfor %}
                     </ul>
@@ -44,11 +46,39 @@
         }
     
         webSocket.onmessage = function(event) {
-            console.log('Received:', event.data);
+            var _data = JSON.parse(event.data)
+            $(".notification-list").append('<li class="list-group-item">'+_data.notif+'<span class="btn btn-primary btn-sm float-end">MarkRead</span></li>');
+            $('.totalunread').text(_data.total);
         }
     
         webSocket.onclose = function(event) {
             console.log('Closed');
         }
+
+        //Mark as read section
+        $(document).on("click",".markreadbtn",function(){
+                var _index=$(this).attr('data-index');
+                var _notif=$(this).attr('data-notification');
+                var _mr=$(this);
+
+                $.ajax({
+                    url:"{% url 'mark_read_trainer_notification' %}",
+                    data:{
+                        notif:_notif
+                    },
+                    dataType:'json',
+                    beforeSend:function(){
+                        
+                    },
+                    success:function(res){
+                        if(res.bool==true){
+                            $(".totalunread").text(res.TotalUnread);
+                            _mr.remove();
+                        }
+                    }
+                });
+
+            });
+            //end
     </script>    
 {% endblock %}
