Feat: Template tag

--- a/GymManagementSystem/main/templates/report_a_user.html
+++ b/GymManagementSystem/main/templates/report_a_user.html
@@ -10,7 +10,7 @@
                     {% include 'trainer/left_sidebar.html' %}
                 </div>
                 <div class="col-9">
-                    <h3 class="mb-4 border-bottom pb-1">Change Password</h3>
+                    <h3 class="mb-4 border-bottom pb-1">Report A User</h3>
                     {% if msg %}
                     <p class="text-success">{{msg}}</p>
                     {% endif %}
