--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -75,7 +75,7 @@
             <a href="{% url 'pagedetail' 2 %}">Privacy</a> · 
             <a href="{% url 'pagedetail' 3 %}">Terms</a> . 
             <a href="{% url 'faq' %}">FAQ</a>
-			<a href="#">Contact Us</a>
+			<a href="{% url 'contact_us' %}">Contact Us</a>
         </p>
 	  </footer>
 
