--- a/GymManagementSystem/main/templates/pricing.html
+++ b/GymManagementSystem/main/templates/pricing.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load check_package %}
 {% load mathfilters %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-icons/font/bootstrap-icons.css' %}" />
@@ -25,8 +26,26 @@
               <li>{{feature.title}}</li>
               {% endfor %}
             </ul>
+              {% check_purchased_package request.user.id plan.id as check_pkg %}
+              {% if check_pkg %}
+                <p class="text-danger">{% check_plan_validity request.user.id plan.id %} Days Left</p>
+              {% else %}
+              {% endif %}
+
+
             {% if request.user.is_authenticated %}
+            {% check_purchased_package request.user.id plan.id as check_pkg %}
+            {% check_plan_validity request.user.id plan.id as check_validity %}
+            {% if check_pkg %}
+              {% if check_validity %}
+                <a href="#" class="w-100 btn btn-lg btn-dark disabled">Purchased</a>
+              {% else %}
+                <a href="#" class="w-100 btn btn-lg btn-dark disabled">Expired</a>
+              {% endif %}
+            {% else %}
             <a href="{% url 'checkout' plan.id %}" class="w-100 btn btn-lg btn-outline-primary">Get started</a>
+            {% endif %}
+
             {% else %}
             <a href="{% url 'login' %}" class="w-100 btn btn-lg btn-outline-primary">Get started</a>
             {% endif %}
