--- a/GymManagementSystem/main/templates/trainer/left_sidebar.html
+++ b/GymManagementSystem/main/templates/trainer/left_sidebar.html
@@ -6,4 +6,5 @@
     <a href="{% url 'trainer_changepassword' %}" class="list-group-item {% if request.path == '/trainer_changepassword' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Change Password</a>
     <a href="{% url 'messages' %}" class="list-group-item {% if request.path == '/messages' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Messages<span class="float-end badge bg-danger mt-1">{{messages.count}}</span></a>
     <a href="{% url 'trainer_notification' %}" class="list-group-item {% if request.path == '/trainer_notification' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Notifications <span class="float-end badge bg-danger mt-1 totalunread">{{TotalUnread}}</span><i class="bi bi-bell"></i></a>
+    <a href="{% url 'report_a_user' %}" class="list-group-item {% if request.path == '/report_a_user' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Report A User </a>
 </div>
