--- a/GymManagementSystem/main/templates/user/left_sidebar.html
+++ b/GymManagementSystem/main/templates/user/left_sidebar.html
@@ -4,4 +4,5 @@
     <a href="{% url 'password_change' %}" class="list-group-item {% if request.path == '/accounts/password_change/' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Change Password</a>
     <a href="{% url 'notification' %}" class="list-group-item {% if request.path == '/notification' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Notifications<span class="float-end badge bg-danger mt-1">{{TotalUnread}}</span></a>
     <a href="#" class="list-group-item {% if request.path == '' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Messages</a>
+    <a href="{% url 'report_a_trainer' %}" class="list-group-item {% if request.path == '/report_a_trainer' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Report A Trainer </a>
 </div>
