code refactor| Pricing.html

--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #26547C;">
 	  <div class="container">
-	    <a class="navbar-brand" href="{% url 'home' %}">Re1gns GMS</a>
+	    <a class="navbar-brand" href="{% url 'home' %}">{{logo}}  Re1gns GMS</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
