--- a/GymManagementSystem/main/templates/pricing.html
+++ b/GymManagementSystem/main/templates/pricing.html
@@ -40,7 +40,7 @@
               {% if check_validity %}
                 <a href="#" class="w-100 btn btn-lg btn-dark disabled">Purchased</a>
               {% else %}
-                <a href="#" class="w-100 btn btn-lg btn-dark disabled">Expired</a>
+              <a href="{% url 'checkout' plan.id %}" class="w-100 btn btn-lg btn-outline-primary">Get started</a>
               {% endif %}
             {% else %}
             <a href="{% url 'checkout' plan.id %}" class="w-100 btn btn-lg btn-outline-primary">Get started</a>
