--- a/GymManagementSystem/main/templates/home.html
+++ b/GymManagementSystem/main/templates/home.html
@@ -29,11 +29,11 @@
             {% for service in services %}
             <div class="col-md-4">
                 <div class="card">
-                  <img src="{{service.img.url}}" class="card-img-top" alt="...">
+                  <img src="{{service.img.url}}" class="card-img-top" alt="{{ service_details.title }}">
                   <div class="card-body">
                     <h3 class="card-title">{{service.title}}</h3>
                     <p class="card-text">{{service.detail}}</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                    <a href="{% url 'servicedetail' id=service.id %}" class="btn btn-primary">Read More</a>
                   </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         <p><a href="{% url 'pagedetail' 1 %}" class="btn btn-info text-white">Read More</a></p>
                 </div>
                 <div class="col-md-6 offset-1">
-                        <h1 class="mb-4 section-heading">Gallery <a href="#" class="float-end btn btn-info text-white mt-2">View All</a></h1>
+                        <h1 class="mb-4 section-heading">Gallery <a href="{% url 'gallery' %}" class="float-end btn btn-info text-white mt-2">View All</a></h1>
                         <div class="gallery">
                           {% for gimg in gimgs %}
                           <a data-lightbox="home-gallery" href="{{gimg.img.url}}"><img src="{{gimg.img.url}}" width="155" class="img-thumbnail" alt="{{gimgs.alt_text}}"a>
