--- a/GymManagementSystem/main/templates/success.html
+++ b/GymManagementSystem/main/templates/success.html
@@ -9,4 +9,10 @@
 		<!-- End -->
     </main>
     <!-- End -->
+	<script>
+		// Wait for 2 seconds (2000 milliseconds) and then redirect to the pricing page
+		setTimeout(function() {
+		  window.location.href = "{% url 'pricing' %}";
+		}, 2000);
+	  </script>
 {% endblock %}
