--- a/GymManagementSystem/main/templates/services.html
+++ b/GymManagementSystem/main/templates/services.html
@@ -3,8 +3,9 @@
 <!-- Main Start -->
 <main class="container my-4">
     <div class="row">
+        <h1 class="mb-4 border-bottom pb-1 text-center">Services</h1>
         <div class="col-md-6">
-            <h1>{{ service_details.title }}</h1>
+            <h3>{{ service_details.title }}</h3>
             <!-- Image on the left -->
             <img src="{{ service_details.img.url }}" alt="{{ service_details.title }}" class="img-fluid">
         </div>
