--- a/GymManagementSystem/main/templates/user/edit_profile.html
+++ b/GymManagementSystem/main/templates/user/edit_profile.html
@@ -20,7 +20,7 @@
                             {{form.as_table}}
                             <tr>
                                 <td colspan="2">
-                                    <input type="submit" class="btn btn-primary">
+                                    <button type="submit" class="btn btn-primary" >submit</button>
                                 </td>
                             </tr>
                         </table>
