--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -19,26 +19,26 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #26547C;">
 	  <div class="container">
-	    <a class="navbar-brand" href="{% url 'home' %}">RE1GNS {{logo}}</a>
+	    <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold; color: white;">REIGNS {{logo}}</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 	    <div class="collapse navbar-collapse" id="navbarNav">
 	      <ul class="navbar-nav ms-auto">
 	        <li class="nav-item">
-	          <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+	          <a class="nav-link" aria-current="page" style="color: white;" href="{% url 'home' %}">Home</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" aria-current="page" href="{% url 'gallery' %}">Gallery</a>
+	          <a class="nav-link" aria-current="page" style="color: white;" href="{% url 'gallery' %}">Gallery</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="{% url 'pricing' %}">Pricing</a>
+	          <a class="nav-link" style="color: white;" href="{% url 'pricing' %}">Pricing</a>
 	        </li>
 	        <li class="nav-item">
 	          <a class="nav-link btn btn-sm btn-dark text-white" href="{% url 'enquiry' %}">Enquiry</a>
 	        </li>
 	        <li class="nav-item dropdown">
-	          <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+	          <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" style="color: white;" aria-expanded="false">
 	            My Account
 	          </a>
 	          <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
