--- a/GymManagementSystem/main/templates/registration/signup.html
+++ b/GymManagementSystem/main/templates/registration/signup.html
@@ -10,7 +10,7 @@
 			<div class="row">
 				<div class="col-md-6 offset-3">
                     {% if msg %}
-                    <p class="text-success">{{msg}}</p>
+                    <p class="text-warning">{{msg}}</p>
                     {% endif %}
 					<form method="post" action="">
                         {% csrf_token %}
@@ -33,10 +33,4 @@
 {% else %}
 	<p class="text-success col-md-10 offset-5">Already Logged In!</p>
 {% endif %}
-<script>
-	// Wait for 2 seconds (2000 milliseconds) and then redirect to the pricing page
-	setTimeout(function() {
-	  window.location.href = "{% url 'login' %}";
-	}, 2000);
-  </script>
 {% endblock %}
